write to data folder

--- a/notebooks/20190626_YN_measurement_eda.ipynb
+++ b/notebooks/20190626_YN_measurement_eda.ipynb
@@ -962,38 +962,38 @@
        "AVItd ap4                  16664\n",
        "AVIts ap4                  16354\n",
        "VTS(el-ps4)                16354\n",
-       "VS(el-ps4)                 16338\n",
+       "FE(el-ps4)                 16338\n",
        "                           ...  \n",
+       "Excursión VI: máx.             1\n",
+       "Tmsv 6-SD (%)                  1\n",
        "Diámetro de CIA                1\n",
-       "Tmsv 16-DIF (ms)               1\n",
-       "Tmsv 16-DIF (%)                1\n",
-       "Vmáx A VT                      1\n",
+       "Excursión VI: mín              1\n",
+       "Excursión VI: media            1\n",
        "GP med AP (completo)           1\n",
+       "Excursión VI: DesvEst          1\n",
+       "GC(VM 1 diám)                  1\n",
+       "Tmsv 12-DIF (%)                1\n",
+       "RA ESA_phl                     1\n",
+       "Tmsv 16-DIF (ms)               1\n",
+       "Diám. TSVD proximal            1\n",
+       "RVIDd/LVIDd_phl                1\n",
+       "Tmsv 12-DIF (ms)               1\n",
+       "Tmsv 6-SD (ms)                 1\n",
+       "IVC Diam_phl                   1\n",
+       "Area VD td                     1\n",
        "Tmsv 12-SD (ms)                1\n",
        "Tmsv 6-DIF (ms)                1\n",
-       "Tmpo. R-R                      1\n",
-       "Tmsv 16-SD (ms)                1\n",
-       "AVP(I,D)                       1\n",
+       "Area VD ts                     1\n",
        "IC(VM 1 diám)                  1\n",
-       "Area VD td                     1\n",
-       "RVIDd/LVIDd_phl                1\n",
-       "RA ESA_phl                     1\n",
-       "IVC Diam_phl                   1\n",
        "AVP(I,A)                       1\n",
-       "Tmsv 6-SD (ms)                 1\n",
-       "Tmsv 6-DIF (%)                 1\n",
-       "Vmáx E VT                      1\n",
-       "Tmsv 12-DIF (ms)               1\n",
-       "Tmsv 12-DIF (%)                1\n",
-       "Diám. TSVD proximal            1\n",
+       "Tmpo. R-R                      1\n",
+       "Tmsv 16-SD (%)                 1\n",
+       "Tmsv 16-DIF (%)                1\n",
        "FAC VD                         1\n",
        "LA Length_phl                  1\n",
-       "Area VD ts                     1\n",
-       "Excursión VI: mín              1\n",
-       "Tmsv 12-SD (%)                 1\n",
-       "E/A VT                         1\n",
-       "Tmsv 6-SD (%)                  1\n",
-       "GC(VM 1 diám)                  1\n",
+       "AVP(I,D)                       1\n",
+       "Vmáx E VT                      1\n",
+       "Tmsv 6-DIF (%)                 1\n",
        "Name: name, Length: 362, dtype: int64"
       ]
      },
@@ -3597,7 +3597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_with_views_df.to_csv('frames_with_views.csv')"
+    "frames_with_views_df.to_csv('../data/02_intermediate/frames_with_views.csv')"
    ]
   }
  ],
