added diastolic/systolic info

--- a/notebooks/20190626_YN_measurement_eda.ipynb
+++ b/notebooks/20190626_YN_measurement_eda.ipynb
@@ -960,40 +960,40 @@
        "DVIts ap4                  17210\n",
        "VTD(el-ps4)                16665\n",
        "AVItd ap4                  16664\n",
-       "AVIts ap4                  16354\n",
        "VTS(el-ps4)                16354\n",
+       "AVIts ap4                  16354\n",
        "FE(el-ps4)                 16338\n",
        "                           ...  \n",
-       "Excursión VI: máx.             1\n",
-       "Tmsv 6-SD (%)                  1\n",
-       "Diámetro de CIA                1\n",
-       "Excursión VI: mín              1\n",
-       "Excursión VI: media            1\n",
-       "GP med AP (completo)           1\n",
-       "Excursión VI: DesvEst          1\n",
-       "GC(VM 1 diám)                  1\n",
-       "Tmsv 12-DIF (%)                1\n",
-       "RA ESA_phl                     1\n",
-       "Tmsv 16-DIF (ms)               1\n",
-       "Diám. TSVD proximal            1\n",
-       "RVIDd/LVIDd_phl                1\n",
-       "Tmsv 12-DIF (ms)               1\n",
-       "Tmsv 6-SD (ms)                 1\n",
-       "IVC Diam_phl                   1\n",
-       "Area VD td                     1\n",
-       "Tmsv 12-SD (ms)                1\n",
-       "Tmsv 6-DIF (ms)                1\n",
-       "Area VD ts                     1\n",
-       "IC(VM 1 diám)                  1\n",
-       "AVP(I,A)                       1\n",
-       "Tmpo. R-R                      1\n",
-       "Tmsv 16-SD (%)                 1\n",
-       "Tmsv 16-DIF (%)                1\n",
-       "FAC VD                         1\n",
-       "LA Length_phl                  1\n",
-       "AVP(I,D)                       1\n",
        "Vmáx E VT                      1\n",
+       "Excursión VI: DesvEst          1\n",
+       "Tmpo. R-R                      1\n",
+       "Diám. TSVD proximal            1\n",
+       "Tmsv 16-DIF (ms)               1\n",
+       "Tmsv 12-DIF (ms)               1\n",
+       "Excursión VI: máx.             1\n",
+       "Vmáx A VT                      1\n",
+       "RVIDd/LVIDd_phl                1\n",
+       "LA Length_phl                  1\n",
+       "AVP(I,A)                       1\n",
+       "FAC VD                         1\n",
+       "Tmsv 6-DIF (ms)                1\n",
+       "Area VD td                     1\n",
+       "IVC Diam_phl                   1\n",
        "Tmsv 6-DIF (%)                 1\n",
+       "Tmsv 6-SD (%)                  1\n",
+       "Tmsv 6-SD (ms)                 1\n",
+       "Tmsv 16-DIF (%)                1\n",
+       "GC(VM 1 diám)                  1\n",
+       "Tmsv 12-SD (%)                 1\n",
+       "Excursión VI: media            1\n",
+       "Diámetro de CIA                1\n",
+       "Area VD ts                     1\n",
+       "Tmsv 16-SD (ms)                1\n",
+       "E/A VT                         1\n",
+       "Excursión VI: mín              1\n",
+       "Tmsv 12-SD (ms)                1\n",
+       "Tmsv 12-DIF (%)                1\n",
+       "IC(VM 1 diám)                  1\n",
        "Name: name, Length: 362, dtype: int64"
       ]
      },
@@ -3062,6 +3062,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MEASUREMENTS_END_DIASTOLIC = ['DVItd', 'SIVtd', 'PPVItd', 'AVItd ap4', 'VTD(el-ps4)', 'VTD(MDD-ps4)', 'VTD 4C', 'AVItd ap2', 'VTD(el-ps2)', 'VTD(MDD-ps2)', 'VTD 2C']\n",
+    "MEASUREMENTS_END_SYSTOLIC = ['DVIts', 'AVIts ap4', 'VTS(el-ps4)', 'VTS(MDD-ps4)', 'VTS 4C', 'AVIts ap2', 'VTS(el-ps2)', 'VTS(MDD-ps2)', 'VTS 2C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_df['is_end_diastolic'] = filter_df['name'].isin(MEASUREMENTS_END_DIASTOLIC)\n",
+    "filter_df['is_end_systolic'] = filter_df['name'].isin(MEASUREMENTS_END_SYSTOLIC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(filter_df['is_end_diastolic'] & filter_df['is_end_systolic']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "filter_df['is_plax'] = filter_df['name'].isin(MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW)\n",
     "filter_df['maybe_plax'] = filter_df['name'].isin(POTENTIAL_MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW)\n",
     "filter_df['is_a4c'] = filter_df['name'].isin(MEASUREMENTS_APICAL_4_CHAMBER_VIEW)\n",
@@ -3070,7 +3110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3083,14 +3123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(113640, 7)\n"
+      "(113640, 9)\n"
      ]
     },
     {
@@ -3117,6 +3157,8 @@
        "      <th></th>\n",
        "      <th>studyidk</th>\n",
        "      <th>indexinmglist</th>\n",
+       "      <th>is_end_diastolic</th>\n",
+       "      <th>is_end_systolic</th>\n",
        "      <th>is_plax</th>\n",
        "      <th>maybe_plax</th>\n",
        "      <th>is_a4c</th>\n",
@@ -3133,6 +3175,8 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3141,6 +3185,8 @@
        "      <th>5.0</th>\n",
        "      <td>2882.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3153,6 +3199,8 @@
        "      <td>2882.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -3162,6 +3210,8 @@
        "      <th>15.0</th>\n",
        "      <td>2882.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -3173,6 +3223,8 @@
        "      <th>0.0</th>\n",
        "      <td>2915.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -3184,6 +3236,8 @@
        "      <th>18.0</th>\n",
        "      <td>2966.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3195,24 +3249,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                   studyidk  indexinmglist  is_plax  maybe_plax  is_a4c  \\\n",
-       "instanceidk frame                                                         \n",
-       "57162       5.0      2882.0            0.0     True       False   False   \n",
-       "57164       8.0      2882.0            0.0    False       False    True   \n",
-       "            15.0     2882.0            1.0    False       False    True   \n",
-       "57571       0.0      2915.0            0.0    False        True   False   \n",
-       "58204       18.0     2966.0            0.0     True       False   False   \n",
+       "                   studyidk  indexinmglist  is_end_diastolic  is_end_systolic  \\\n",
+       "instanceidk frame                                                               \n",
+       "57162       5.0      2882.0            0.0             False            False   \n",
+       "57164       8.0      2882.0            0.0             False             True   \n",
+       "            15.0     2882.0            1.0              True            False   \n",
+       "57571       0.0      2915.0            0.0              True            False   \n",
+       "58204       18.0     2966.0            0.0             False            False   \n",
        "\n",
-       "                   is_a2c  view  \n",
-       "instanceidk frame                \n",
-       "57162       5.0     False  plax  \n",
-       "57164       8.0     False   a4c  \n",
-       "            15.0    False   a4c  \n",
-       "57571       0.0     False  plax  \n",
-       "58204       18.0    False  plax  "
+       "                   is_plax  maybe_plax  is_a4c  is_a2c  view  \n",
+       "instanceidk frame                                             \n",
+       "57162       5.0       True       False   False   False  plax  \n",
+       "57164       8.0      False       False    True   False   a4c  \n",
+       "            15.0     False       False    True   False   a4c  \n",
+       "57571       0.0      False        True   False   False  plax  \n",
+       "58204       18.0      True       False   False   False  plax  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3226,7 +3280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3235,7 +3289,7 @@
        "0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3246,7 +3300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3255,7 +3309,7 @@
        "162"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3266,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3276,7 +3330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3285,7 +3339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3312,6 +3366,8 @@
        "      <th>instanceidk</th>\n",
        "      <th>studyidk</th>\n",
        "      <th>indexinmglist</th>\n",
+       "      <th>is_end_diastolic</th>\n",
+       "      <th>is_end_systolic</th>\n",
        "      <th>is_plax</th>\n",
        "      <th>maybe_plax</th>\n",
        "      <th>is_a4c</th>\n",
@@ -3326,6 +3382,8 @@
        "      <td>57162</td>\n",
        "      <td>2882.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3339,6 +3397,8 @@
        "      <td>2882.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -3350,6 +3410,8 @@
        "      <td>57164</td>\n",
        "      <td>2882.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -3362,6 +3424,8 @@
        "      <td>57571</td>\n",
        "      <td>2915.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -3374,6 +3438,8 @@
        "      <td>58204</td>\n",
        "      <td>2966.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3386,22 +3452,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   instanceidk  studyidk  indexinmglist  is_plax  maybe_plax  is_a4c  is_a2c  \\\n",
-       "0        57162    2882.0            0.0     True       False   False   False   \n",
-       "1        57164    2882.0            0.0    False       False    True   False   \n",
-       "2        57164    2882.0            1.0    False       False    True   False   \n",
-       "3        57571    2915.0            0.0    False        True   False   False   \n",
-       "4        58204    2966.0            0.0     True       False   False   False   \n",
+       "   instanceidk  studyidk  indexinmglist  is_end_diastolic  is_end_systolic  \\\n",
+       "0        57162    2882.0            0.0             False            False   \n",
+       "1        57164    2882.0            0.0             False             True   \n",
+       "2        57164    2882.0            1.0              True            False   \n",
+       "3        57571    2915.0            0.0              True            False   \n",
+       "4        58204    2966.0            0.0             False            False   \n",
        "\n",
-       "   view  is_multiview  \n",
-       "0  plax         False  \n",
-       "1   a4c         False  \n",
-       "2   a4c         False  \n",
-       "3  plax         False  \n",
-       "4  plax         False  "
+       "   is_plax  maybe_plax  is_a4c  is_a2c  view  is_multiview  \n",
+       "0     True       False   False   False  plax         False  \n",
+       "1    False       False    True   False   a4c         False  \n",
+       "2    False       False    True   False   a4c         False  \n",
+       "3    False        True   False   False  plax         False  \n",
+       "4     True       False   False   False  plax         False  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3413,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -3447,15 +3513,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>58207</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117616</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125620</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161797</th>\n",
@@ -3463,7 +3529,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>170419</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3472,14 +3538,14 @@
       "text/plain": [
        "                    view\n",
        "instanceidk             \n",
-       "58207        {a4c, plax}\n",
-       "117616       {a4c, plax}\n",
-       "125620       {a4c, plax}\n",
+       "58207        {plax, a4c}\n",
+       "117616       {plax, a4c}\n",
+       "125620       {plax, a4c}\n",
        "161797       {a4c, plax}\n",
-       "170419       {a4c, plax}"
+       "170419       {plax, a4c}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3491,18 +3557,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{a4c, a2c}     113\n",
-       "{a4c, plax}     49\n",
+       "{a2c, a4c}     113\n",
+       "{plax, a4c}     49\n",
        "Name: view, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3513,7 +3579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -3522,7 +3588,7 @@
        "27838"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3533,7 +3599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3542,7 +3608,7 @@
        "26014"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3553,7 +3619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3562,7 +3628,7 @@
        "38880"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3573,7 +3639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3582,7 +3648,7 @@
        "20908"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3593,7 +3659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
