use updated df name at the end of the nb

--- a/notebooks/20190626_YN_measurement_eda.ipynb
+++ b/notebooks/20190626_YN_measurement_eda.ipynb
@@ -940,8 +940,8 @@
        "ASC (Haycock)              21438\n",
        "Vmáx V2 Ao                 20828\n",
        "GP máx Ao                  20827\n",
-       "VTD(Teich)                 20623\n",
        "DVItd                      20623\n",
+       "VTD(Teich)                 20623\n",
        "VTD(cúbico)                20613\n",
        "SIVtd                      20548\n",
        "PPVItd                     20430\n",
@@ -964,36 +964,36 @@
        "AVIts ap4                  16354\n",
        "FE(el-ps4)                 16338\n",
        "                           ...  \n",
-       "Vmáx E VT                      1\n",
-       "Excursión VI: DesvEst          1\n",
-       "Tmpo. R-R                      1\n",
-       "Diám. TSVD proximal            1\n",
-       "Tmsv 16-DIF (ms)               1\n",
        "Tmsv 12-DIF (ms)               1\n",
-       "Excursión VI: máx.             1\n",
+       "AVP(I,D)                       1\n",
        "Vmáx A VT                      1\n",
-       "RVIDd/LVIDd_phl                1\n",
-       "LA Length_phl                  1\n",
-       "AVP(I,A)                       1\n",
-       "FAC VD                         1\n",
-       "Tmsv 6-DIF (ms)                1\n",
-       "Area VD td                     1\n",
-       "IVC Diam_phl                   1\n",
-       "Tmsv 6-DIF (%)                 1\n",
-       "Tmsv 6-SD (%)                  1\n",
-       "Tmsv 6-SD (ms)                 1\n",
        "Tmsv 16-DIF (%)                1\n",
-       "GC(VM 1 diám)                  1\n",
-       "Tmsv 12-SD (%)                 1\n",
-       "Excursión VI: media            1\n",
+       "FAC VD                         1\n",
+       "Excursión VI: máx.             1\n",
+       "Excursión VI: DesvEst          1\n",
+       "RVIDd/LVIDd_phl                1\n",
+       "Tmsv 16-DIF (ms)               1\n",
+       "AVP(I,A)                       1\n",
+       "Tmsv 16-SD (%)                 1\n",
+       "Vmáx E VT                      1\n",
        "Diámetro de CIA                1\n",
-       "Area VD ts                     1\n",
-       "Tmsv 16-SD (ms)                1\n",
-       "E/A VT                         1\n",
+       "LA Length_phl                  1\n",
+       "Excursión VI: media            1\n",
+       "Tmsv 6-SD (ms)                 1\n",
+       "RA ESA_phl                     1\n",
        "Excursión VI: mín              1\n",
+       "GC(VM 1 diám)                  1\n",
        "Tmsv 12-SD (ms)                1\n",
-       "Tmsv 12-DIF (%)                1\n",
        "IC(VM 1 diám)                  1\n",
+       "Diám. TSVD proximal            1\n",
+       "Tmsv 12-SD (%)                 1\n",
+       "Tmsv 6-SD (%)                  1\n",
+       "Tmsv 6-DIF (%)                 1\n",
+       "Area VD td                     1\n",
+       "Tmsv 12-DIF (%)                1\n",
+       "E/A VT                         1\n",
+       "Tmpo. R-R                      1\n",
+       "IVC Diam_phl                   1\n",
        "Name: name, Length: 362, dtype: int64"
       ]
      },
@@ -3525,7 +3525,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161797</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>170419</th>\n",
@@ -3541,7 +3541,7 @@
        "58207        {plax, a4c}\n",
        "117616       {plax, a4c}\n",
        "125620       {plax, a4c}\n",
-       "161797       {a4c, plax}\n",
+       "161797       {plax, a4c}\n",
        "170419       {plax, a4c}"
       ]
      },
@@ -3551,7 +3551,7 @@
     }
    ],
    "source": [
-    "conflict_sets = group_df[frames_with_views_df['is_multiview']==True].groupby('instanceidk').agg({'view': lambda x: set(x)})\n",
+    "conflict_sets = frames_with_views_df[frames_with_views_df['is_multiview']==True].groupby('instanceidk').agg({'view': lambda x: set(x)})\n",
     "conflict_sets.head()"
    ]
   },
@@ -3563,7 +3563,7 @@
     {
      "data": {
       "text/plain": [
-       "{a2c, a4c}     113\n",
+       "{a4c, a2c}     113\n",
        "{plax, a4c}     49\n",
        "Name: view, dtype: int64"
       ]
@@ -3594,7 +3594,7 @@
     }
    ],
    "source": [
-    "group_df['is_plax'].sum()"
+    "frames_with_views_df['is_plax'].sum()"
    ]
   },
   {
@@ -3614,7 +3614,7 @@
     }
    ],
    "source": [
-    "group_df['maybe_plax'].sum()"
+    "frames_with_views_df['maybe_plax'].sum()"
    ]
   },
   {
@@ -3634,7 +3634,7 @@
     }
    ],
    "source": [
-    "group_df['is_a4c'].sum()"
+    "frames_with_views_df['is_a4c'].sum()"
    ]
   },
   {
@@ -3654,7 +3654,7 @@
     }
    ],
    "source": [
-    "group_df['is_a2c'].sum()"
+    "frames_with_views_df['is_a2c'].sum()"
    ]
   },
   {
