--- a/notebooks/20190626_YN_measurement_eda.ipynb
+++ b/notebooks/20190626_YN_measurement_eda.ipynb
@@ -940,8 +940,8 @@
        "ASC (Haycock)              21438\n",
        "Vmáx V2 Ao                 20828\n",
        "GP máx Ao                  20827\n",
-       "DVItd                      20623\n",
        "VTD(Teich)                 20623\n",
+       "DVItd                      20623\n",
        "VTD(cúbico)                20613\n",
        "SIVtd                      20548\n",
        "PPVItd                     20430\n",
@@ -960,40 +960,40 @@
        "DVIts ap4                  17210\n",
        "VTD(el-ps4)                16665\n",
        "AVItd ap4                  16664\n",
-       "VTS(el-ps4)                16354\n",
        "AVIts ap4                  16354\n",
+       "VTS(el-ps4)                16354\n",
        "FE(el-ps4)                 16338\n",
        "                           ...  \n",
-       "Tmsv 12-DIF (ms)               1\n",
-       "AVP(I,D)                       1\n",
-       "Vmáx A VT                      1\n",
-       "Tmsv 16-DIF (%)                1\n",
-       "FAC VD                         1\n",
-       "Excursión VI: máx.             1\n",
-       "Excursión VI: DesvEst          1\n",
-       "RVIDd/LVIDd_phl                1\n",
-       "Tmsv 16-DIF (ms)               1\n",
-       "AVP(I,A)                       1\n",
-       "Tmsv 16-SD (%)                 1\n",
-       "Vmáx E VT                      1\n",
-       "Diámetro de CIA                1\n",
-       "LA Length_phl                  1\n",
-       "Excursión VI: media            1\n",
-       "Tmsv 6-SD (ms)                 1\n",
-       "RA ESA_phl                     1\n",
-       "Excursión VI: mín              1\n",
-       "GC(VM 1 diám)                  1\n",
-       "Tmsv 12-SD (ms)                1\n",
-       "IC(VM 1 diám)                  1\n",
-       "Diám. TSVD proximal            1\n",
-       "Tmsv 12-SD (%)                 1\n",
-       "Tmsv 6-SD (%)                  1\n",
-       "Tmsv 6-DIF (%)                 1\n",
-       "Area VD td                     1\n",
-       "Tmsv 12-DIF (%)                1\n",
-       "E/A VT                         1\n",
-       "Tmpo. R-R                      1\n",
        "IVC Diam_phl                   1\n",
+       "Tmsv 6-SD (ms)                 1\n",
+       "Tmsv 16-DIF (%)                1\n",
+       "Tmsv 12-SD (ms)                1\n",
+       "Tmsv 6-DIF (ms)                1\n",
+       "GP med AP (completo)           1\n",
+       "E/A VT                         1\n",
+       "Vmáx E VT                      1\n",
+       "Area VD ts                     1\n",
+       "IC(VM 1 diám)                  1\n",
+       "RVIDd/LVIDd_phl                1\n",
+       "GC(VM 1 diám)                  1\n",
+       "Excursión VI: mín              1\n",
+       "Tmsv 12-DIF (ms)               1\n",
+       "Tmsv 12-SD (%)                 1\n",
+       "Tmsv 16-SD (%)                 1\n",
+       "Area VD td                     1\n",
+       "Vmáx A VT                      1\n",
+       "LA Length_phl                  1\n",
+       "AVP(I,A)                       1\n",
+       "Diámetro de CIA                1\n",
+       "AVP(I,D)                       1\n",
+       "Excursión VI: DesvEst          1\n",
+       "Excursión VI: máx.             1\n",
+       "Tmsv 6-SD (%)                  1\n",
+       "Tmsv 12-DIF (%)                1\n",
+       "FAC VD                         1\n",
+       "Diám. TSVD proximal            1\n",
+       "Tmsv 6-DIF (%)                 1\n",
+       "Tmsv 16-DIF (ms)               1\n",
        "Name: name, Length: 362, dtype: int64"
       ]
      },
@@ -3563,7 +3563,7 @@
     {
      "data": {
       "text/plain": [
-       "{a4c, a2c}     113\n",
+       "{a2c, a4c}     113\n",
        "{plax, a4c}     49\n",
        "Name: view, dtype: int64"
       ]
@@ -3625,7 +3625,7 @@
     {
      "data": {
       "text/plain": [
-       "38880"
+       "53852"
       ]
      },
      "execution_count": 91,
@@ -3634,7 +3634,7 @@
     }
    ],
    "source": [
-    "frames_with_views_df['is_a4c'].sum()"
+    "frames_with_views_df['is_plax'].sum() + frames_with_views_df['maybe_plax'].sum()"
    ]
   },
   {
@@ -3645,10 +3645,30 @@
     {
      "data": {
       "text/plain": [
-       "20908"
+       "38880"
       ]
      },
      "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frames_with_views_df['is_a4c'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20908"
+      ]
+     },
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3659,7 +3679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
