results_df, breakdown by diastolic/systolic/neither

--- a/notebooks/20190701_YN_measurement_eda.ipynb
+++ b/notebooks/20190701_YN_measurement_eda.ipynb
@@ -964,36 +964,36 @@
        "VTS(el-ps4)                16354\n",
        "FE(el-ps4)                 16338\n",
        "                           ...  \n",
-       "IVC Diam_phl                   1\n",
-       "Tmsv 6-SD (ms)                 1\n",
-       "Tmsv 16-DIF (%)                1\n",
-       "Tmsv 12-SD (ms)                1\n",
-       "Tmsv 6-DIF (ms)                1\n",
-       "GP med AP (completo)           1\n",
-       "E/A VT                         1\n",
-       "Vmáx E VT                      1\n",
-       "Area VD ts                     1\n",
-       "IC(VM 1 diám)                  1\n",
-       "RVIDd/LVIDd_phl                1\n",
-       "GC(VM 1 diám)                  1\n",
-       "Excursión VI: mín              1\n",
-       "Tmsv 12-DIF (ms)               1\n",
        "Tmsv 12-SD (%)                 1\n",
+       "Tmsv 6-DIF (ms)                1\n",
+       "Tmsv 6-SD (ms)                 1\n",
+       "Vmáx E VT                      1\n",
+       "AVP(I,D)                       1\n",
+       "Tmsv 16-DIF (ms)               1\n",
+       "IC(VM 1 diám)                  1\n",
+       "Tmsv 16-SD (ms)                1\n",
+       "Vmáx A VT                      1\n",
+       "GP med AP (completo)           1\n",
+       "Tmsv 6-SD (%)                  1\n",
+       "RVIDd/LVIDd_phl                1\n",
+       "RA ESA_phl                     1\n",
+       "GC(VM 1 diám)                  1\n",
+       "Tmsv 12-DIF (ms)               1\n",
+       "Excursión VI: media            1\n",
+       "Tmsv 12-DIF (%)                1\n",
        "Tmsv 16-SD (%)                 1\n",
        "Area VD td                     1\n",
-       "Vmáx A VT                      1\n",
-       "LA Length_phl                  1\n",
+       "Diám. TSVD proximal            1\n",
+       "Excursión VI: DesvEst          1\n",
        "AVP(I,A)                       1\n",
        "Diámetro de CIA                1\n",
-       "AVP(I,D)                       1\n",
-       "Excursión VI: DesvEst          1\n",
-       "Excursión VI: máx.             1\n",
-       "Tmsv 6-SD (%)                  1\n",
-       "Tmsv 12-DIF (%)                1\n",
-       "FAC VD                         1\n",
-       "Diám. TSVD proximal            1\n",
+       "Excursión VI: mín              1\n",
        "Tmsv 6-DIF (%)                 1\n",
-       "Tmsv 16-DIF (ms)               1\n",
+       "FAC VD                         1\n",
+       "Area VD ts                     1\n",
+       "LA Length_phl                  1\n",
+       "E/A VT                         1\n",
+       "Tmpo. R-R                      1\n",
        "Name: name, Length: 362, dtype: int64"
       ]
      },
@@ -1489,6 +1489,7 @@
     }
    ],
    "source": [
+    "# TODO: filter outliers?\n",
     "num_outliers = ((total_measurement_counts_per_instance < outlier_min) | (total_measurement_counts_per_instance > outlier_max)).sum()\n",
     "num_outliers"
    ]
@@ -1706,6 +1707,7 @@
     }
    ],
    "source": [
+    "# TODO: filter outliers?\n",
     "num_outliers = ((instance_counts_per_study < outlier_min) | (instance_counts_per_study > outlier_max)).sum()\n",
     "num_outliers"
    ]
@@ -1878,6 +1880,7 @@
     }
    ],
    "source": [
+    "# TODO: filter outliers?\n",
     "num_outliers = ((frame_counts_per_instance < outlier_min) | (frame_counts_per_instance > outlier_max)).sum()\n",
     "num_outliers"
    ]
@@ -3513,23 +3516,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>58207</th>\n",
-       "      <td>{plax, a4c}</td>\n",
+       "      <td>{a4c, plax}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117616</th>\n",
-       "      <td>{plax, a4c}</td>\n",
+       "      <td>{a4c, plax}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125620</th>\n",
-       "      <td>{plax, a4c}</td>\n",
+       "      <td>{a4c, plax}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161797</th>\n",
-       "      <td>{plax, a4c}</td>\n",
+       "      <td>{a4c, plax}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>170419</th>\n",
-       "      <td>{plax, a4c}</td>\n",
+       "      <td>{a4c, plax}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3538,11 +3541,11 @@
       "text/plain": [
        "                    view\n",
        "instanceidk             \n",
-       "58207        {plax, a4c}\n",
-       "117616       {plax, a4c}\n",
-       "125620       {plax, a4c}\n",
-       "161797       {plax, a4c}\n",
-       "170419       {plax, a4c}"
+       "58207        {a4c, plax}\n",
+       "117616       {a4c, plax}\n",
+       "125620       {a4c, plax}\n",
+       "161797       {a4c, plax}\n",
+       "170419       {a4c, plax}"
       ]
      },
      "execution_count": 87,
@@ -3563,8 +3566,8 @@
     {
      "data": {
       "text/plain": [
-       "{a2c, a4c}     113\n",
-       "{plax, a4c}     49\n",
+       "{a4c, a2c}     113\n",
+       "{a4c, plax}     49\n",
        "Name: view, dtype: int64"
       ]
      },
@@ -3581,40 +3584,32 @@
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27838"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "frames_with_views_df['is_plax'].sum()"
+    "from collections import defaultdict\n",
+    "\n",
+    "def get_view_counts(df):\n",
+    "    d = defaultdict(dict)\n",
+    "    d['plax'] = df['is_plax'].sum()\n",
+    "    d['plax_maybe'] = df['maybe_plax'].sum()\n",
+    "    d['plax_total'] = d['plax'] + d['plax_maybe']\n",
+    "    d['a4c'] = df['is_a4c'].sum()\n",
+    "    d['a2c'] = df['is_a2c'].sum()\n",
+    "    d['total'] = d['plax_total'] + d['a4c'] + d['a2c']\n",
+    "    return d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26014"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "frames_with_views_df['maybe_plax'].sum()"
+    "results = defaultdict(dict)\n",
+    "results['end_diastolic'] = get_view_counts(frames_with_views_df[frames_with_views_df['is_end_diastolic']])\n",
+    "results['end_systolic'] = get_view_counts(frames_with_views_df[frames_with_views_df['is_end_systolic']])\n",
+    "results['neither'] = get_view_counts(frames_with_views_df[(~frames_with_views_df['is_end_diastolic']) & (~frames_with_views_df['is_end_systolic'])])\n",
+    "results['total'] = get_view_counts(frames_with_views_df)"
    ]
   },
   {
@@ -3624,8 +3619,80 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a2c</th>\n",
+       "      <th>a4c</th>\n",
+       "      <th>plax</th>\n",
+       "      <th>plax_maybe</th>\n",
+       "      <th>plax_total</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>end_diastolic</th>\n",
+       "      <td>9404</td>\n",
+       "      <td>17253</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19125</td>\n",
+       "      <td>19125</td>\n",
+       "      <td>45782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>end_systolic</th>\n",
+       "      <td>9044</td>\n",
+       "      <td>16437</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5947</td>\n",
+       "      <td>5947</td>\n",
+       "      <td>31428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>neither</th>\n",
+       "      <td>2460</td>\n",
+       "      <td>5190</td>\n",
+       "      <td>27838</td>\n",
+       "      <td>942</td>\n",
+       "      <td>28780</td>\n",
+       "      <td>36430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total</th>\n",
+       "      <td>20908</td>\n",
+       "      <td>38880</td>\n",
+       "      <td>27838</td>\n",
+       "      <td>26014</td>\n",
+       "      <td>53852</td>\n",
+       "      <td>113640</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "53852"
+       "                 a2c    a4c   plax  plax_maybe  plax_total   total\n",
+       "end_diastolic   9404  17253      0       19125       19125   45782\n",
+       "end_systolic    9044  16437      0        5947        5947   31428\n",
+       "neither         2460   5190  27838         942       28780   36430\n",
+       "total          20908  38880  27838       26014       53852  113640"
       ]
      },
      "execution_count": 91,
@@ -3634,52 +3701,14 @@
     }
    ],
    "source": [
-    "frames_with_views_df['is_plax'].sum() + frames_with_views_df['maybe_plax'].sum()"
+    "results_df = pd.DataFrame.from_dict(results)\n",
+    "results_df = results_df.transpose()\n",
+    "results_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "38880"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frames_with_views_df['is_a4c'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20908"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frames_with_views_df['is_a2c'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
