--- a/notebooks/20190702_YN_measurement_eda.ipynb
+++ b/notebooks/20190702_YN_measurement_eda.ipynb
@@ -915,7 +915,10 @@
     "* 362 unique measurements\n",
     "* 24,912 unique studies with final (reported) measurements\n",
     "* 24,471 unique studies with total (recorded) measurements\n",
-    "* 254,159 unique instances with total (recorded) measurements"
+    "    * 128 outliers based on instances per study)\n",
+    "* 254,159 unique instances with total (recorded) measurements\n",
+    "    * 2,357 outliers based on measurements per instance\n",
+    "    * 31,877 outliers based on frame counts per instance)"
    ]
   },
   {
@@ -2000,11 +2003,16 @@
     "* 295,962 total (recorded) instance measurements with frames for measurements we care about\n",
     "* 23,327 unique studies with total (recorded) measurements for measurements we care about\n",
     "* 69,185 unique instancs with total (recorded) measurements for measurements we care about\n",
-    "* 162 instances frames with more than one views\n",
-    "* 27,838 instances frames with PLAX view\n",
-    "* 26,014 instances frames with PLAX view potentially\n",
+    "* 162 frames with conflicting views\n",
+    "    * 113 A4C & A2C\n",
+    "    * 49 A4C & PLAX\n",
+    "* 53,852 instances (potentially) witht PLAX view\n",
+    "    * 27,838 instances frames with PLAX view\n",
+    "    * 26,014 instances frames with PLAX view potentially\n",
     "* 38,880 instances frames with A4C view\n",
-    "* 20,908 instances frames with A2C view"
+    "* 20,908 instances frames with A2C view\n",
+    "* 45,782 instances frames \n",
+    "* 113,640 total frames from all views"
    ]
   },
   {
